# mfs2012

./: Makefile.am  configure.ac
backend/: feed-service.c  feed-test.c  gt-feed-server.c  gt-feed.c
po/: POTFILES.in  es.po
ui/gtk/: traktor-gtk
ui/gtk/traktor/: config.py.in  traktorwindow.py
